[gd_scene load_steps=30 format=4 uid="uid://jnq71uktp4w4"]

[ext_resource type="Texture2D" uid="uid://dlg0eqwyhkb8u" path="res://sprites/fade2.png" id="1_iohl6"]
[ext_resource type="Script" uid="uid://l1jbfyxvfpff" path="res://scenes/menus/pause.gd" id="1_q52mi"]
[ext_resource type="PackedScene" uid="uid://c4lnujglc2j60" path="res://scenes/menus/WeaponSelector.tscn" id="3_ino5w"]
[ext_resource type="Shader" uid="uid://b3xb8j1icuyp" path="res://shaders/PaletteSwap.gdshader" id="4_wxdxv"]
[ext_resource type="Texture2D" uid="uid://bk0pouaqui66t" path="res://sprites/hud/weapon_menu.png" id="5_b5jck"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q52mi"]
atlas = ExtResource("1_iohl6")
region = Rect2(18, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_ino5w"]
atlas = ExtResource("1_iohl6")
region = Rect2(16, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxdxv"]
atlas = ExtResource("1_iohl6")
region = Rect2(14, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5jck"]
atlas = ExtResource("1_iohl6")
region = Rect2(12, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_vibko"]
atlas = ExtResource("1_iohl6")
region = Rect2(10, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sydj"]
atlas = ExtResource("1_iohl6")
region = Rect2(8, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyyho"]
atlas = ExtResource("1_iohl6")
region = Rect2(6, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_k40ks"]
atlas = ExtResource("1_iohl6")
region = Rect2(4, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_86mkf"]
atlas = ExtResource("1_iohl6")
region = Rect2(2, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q136"]
atlas = ExtResource("1_iohl6")
region = Rect2(0, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_u81yu"]
atlas = ExtResource("1_iohl6")
region = Rect2(0, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_24p0q"]
atlas = ExtResource("1_iohl6")
region = Rect2(2, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uke7"]
atlas = ExtResource("1_iohl6")
region = Rect2(4, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_unqpk"]
atlas = ExtResource("1_iohl6")
region = Rect2(6, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvmx4"]
atlas = ExtResource("1_iohl6")
region = Rect2(8, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbs77"]
atlas = ExtResource("1_iohl6")
region = Rect2(10, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_gshdy"]
atlas = ExtResource("1_iohl6")
region = Rect2(12, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_yemlk"]
atlas = ExtResource("1_iohl6")
region = Rect2(14, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrha7"]
atlas = ExtResource("1_iohl6")
region = Rect2(16, 0, 2, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_hea3y"]
atlas = ExtResource("1_iohl6")
region = Rect2(18, 0, 2, 2)

[sub_resource type="SpriteFrames" id="SpriteFrames_u81yu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q52mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ino5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxdxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5jck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vibko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sydj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyyho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k40ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86mkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q136")
}],
"loop": false,
"name": &"fadein",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u81yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24p0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uke7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unqpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvmx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbs77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gshdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yemlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrha7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hea3y")
}],
"loop": false,
"name": &"fadeout",
"speed": 30.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b5jck"]
shader = ExtResource("4_wxdxv")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vibko"]
texture = ExtResource("5_b5jck")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_5sydj"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_vibko")

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
layer = 50
script = ExtResource("1_q52mi")

[node name="FadeBG" type="AnimatedSprite2D" parent="."]
process_mode = 3
position = Vector2(191.5, 107.5)
scale = Vector2(192.5, 108.5)
sprite_frames = SubResource("SpriteFrames_u81yu")
animation = &"fadeout"
autoplay = "fadein"
frame = 9
frame_progress = 1.0

[node name="BassWeps" type="Node2D" parent="."]

[node name="Buster" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 25.0
offset_right = 26.0
offset_bottom = 25.0
focus_neighbor_right = NodePath("../Treble")
focus_neighbor_bottom = NodePath("../Scorch")
focus_mode = 2
item = 0

[node name="Treble" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 25.0
offset_right = 138.0
offset_bottom = 25.0
focus_neighbor_left = NodePath("../Buster")
focus_neighbor_bottom = NodePath("../Origami")
focus_mode = 2
item = 10

[node name="Scorch" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 49.0
offset_right = 26.0
offset_bottom = 49.0
focus_neighbor_top = NodePath("../Buster")
focus_neighbor_right = NodePath("../Origami")
focus_neighbor_bottom = NodePath("../Frame")
focus_mode = 2

[node name="Frame" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 73.0
offset_right = 26.0
offset_bottom = 73.0
focus_neighbor_top = NodePath("../Scorch")
focus_neighbor_right = NodePath("../Gale")
focus_neighbor_bottom = NodePath("../Smog")
focus_mode = 2
item = 2

[node name="Smog" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 97.0
offset_right = 26.0
offset_bottom = 97.0
focus_neighbor_top = NodePath("../Frame")
focus_neighbor_right = NodePath("../Bomb")
focus_neighbor_bottom = NodePath("../Shark")
focus_mode = 2
item = 3

[node name="Shark" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 121.0
offset_right = 26.0
offset_bottom = 121.0
focus_neighbor_top = NodePath("../Smog")
focus_neighbor_right = NodePath("../Reaper")
focus_neighbor_bottom = NodePath("../Proto")
focus_mode = 2
item = 4

[node name="Origami" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 49.0
offset_right = 138.0
offset_bottom = 49.0
focus_neighbor_left = NodePath("../Scorch")
focus_neighbor_top = NodePath("../Treble")
focus_neighbor_bottom = NodePath("../Gale")
focus_mode = 2
item = 5

[node name="Gale" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 73.0
offset_right = 138.0
offset_bottom = 73.0
focus_neighbor_left = NodePath("../Frame")
focus_neighbor_top = NodePath("../Origami")
focus_neighbor_bottom = NodePath("../Bomb")
focus_mode = 2
item = 6

[node name="Bomb" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 97.0
offset_right = 138.0
offset_bottom = 97.0
focus_neighbor_left = NodePath("../Smog")
focus_neighbor_top = NodePath("../Gale")
focus_neighbor_bottom = NodePath("../Reaper")
focus_mode = 2
item = 7

[node name="Reaper" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 121.0
offset_right = 138.0
offset_bottom = 121.0
focus_neighbor_left = NodePath("../Shark")
focus_neighbor_top = NodePath("../Bomb")
focus_neighbor_bottom = NodePath("../Proto")
focus_mode = 2
item = 8

[node name="Proto" parent="BassWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 77.0
offset_top = 142.0
offset_right = 77.0
offset_bottom = 142.0
focus_neighbor_left = NodePath("../Shark")
focus_neighbor_top = NodePath("../Shark")
focus_neighbor_right = NodePath("../Reaper")
focus_mode = 2
item = 9

[node name="CopyWeps" type="Node2D" parent="."]
visible = false

[node name="Buster" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 16.0
offset_right = 26.0
offset_bottom = 16.0
focus_neighbor_right = NodePath("../Treble")
focus_neighbor_bottom = NodePath("../Scorch")
focus_mode = 2
item = 0

[node name="Treble" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 16.0
offset_right = 138.0
offset_bottom = 16.0
focus_neighbor_left = NodePath("../Buster")
focus_neighbor_bottom = NodePath("../Origami")
focus_mode = 2
item = 10

[node name="Scorch" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 34.0
offset_right = 26.0
offset_bottom = 34.0
focus_neighbor_top = NodePath("../Buster")
focus_neighbor_right = NodePath("../Origami")
focus_neighbor_bottom = NodePath("../Frame")
focus_mode = 2

[node name="Frame" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 52.0
offset_right = 26.0
offset_bottom = 52.0
focus_neighbor_top = NodePath("../Scorch")
focus_neighbor_right = NodePath("../Gale")
focus_neighbor_bottom = NodePath("../Smog")
focus_mode = 2
item = 2

[node name="Smog" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 70.0
offset_right = 26.0
offset_bottom = 70.0
focus_neighbor_top = NodePath("../Frame")
focus_neighbor_right = NodePath("../Bomb")
focus_neighbor_bottom = NodePath("../Shark")
focus_mode = 2
item = 3

[node name="Shark" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 88.0
offset_right = 26.0
offset_bottom = 88.0
focus_neighbor_top = NodePath("../Smog")
focus_neighbor_right = NodePath("../Scythe")
focus_neighbor_bottom = NodePath("../Carry")
focus_mode = 2
item = 4

[node name="Origami" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 34.0
offset_right = 138.0
offset_bottom = 34.0
focus_neighbor_left = NodePath("../Scorch")
focus_neighbor_top = NodePath("../Treble")
focus_neighbor_bottom = NodePath("../Gale")
focus_mode = 2
item = 5

[node name="Gale" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 52.0
offset_right = 138.0
offset_bottom = 52.0
focus_neighbor_left = NodePath("../Frame")
focus_neighbor_top = NodePath("../Origami")
focus_neighbor_bottom = NodePath("../Bomb")
focus_mode = 2
item = 6

[node name="Bomb" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 70.0
offset_right = 138.0
offset_bottom = 70.0
focus_neighbor_left = NodePath("../Smog")
focus_neighbor_top = NodePath("../Gale")
focus_neighbor_bottom = NodePath("../Scythe")
focus_mode = 2
item = 7

[node name="Scythe" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 88.0
offset_right = 138.0
offset_bottom = 88.0
focus_neighbor_left = NodePath("../Shark")
focus_neighbor_top = NodePath("../Bomb")
focus_neighbor_bottom = NodePath("../Arrow")
focus_mode = 2
item = 8

[node name="Carry" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 106.0
offset_right = 26.0
offset_bottom = 106.0
focus_neighbor_top = NodePath("../Shark")
focus_neighbor_bottom = NodePath("../Mirror")
focus_mode = 2
item = 11

[node name="Arrow" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 106.0
offset_right = 138.0
offset_bottom = 106.0
focus_neighbor_left = NodePath("../Carry")
focus_neighbor_top = NodePath("../Scythe")
focus_neighbor_bottom = NodePath("../Punk")
focus_mode = 2
item = 12

[node name="Mirror" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 124.0
offset_right = 26.0
offset_bottom = 124.0
focus_neighbor_top = NodePath("../Carry")
focus_neighbor_right = NodePath("../Punk")
focus_neighbor_bottom = NodePath("../Ballade")
focus_mode = 2
item = 13

[node name="Punk" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 124.0
offset_right = 138.0
offset_bottom = 124.0
focus_neighbor_left = NodePath("../Mirror")
focus_neighbor_top = NodePath("../Arrow")
focus_neighbor_bottom = NodePath("../Quint")
focus_mode = 2
item = 14

[node name="Ballade" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 26.0
offset_top = 142.0
offset_right = 26.0
offset_bottom = 142.0
focus_neighbor_top = NodePath("../Mirror")
focus_neighbor_right = NodePath("../Quint")
focus_mode = 2
item = 15

[node name="Quint" parent="CopyWeps" instance=ExtResource("3_ino5w")]
material = SubResource("ShaderMaterial_b5jck")
offset_left = 138.0
offset_top = 142.0
offset_right = 138.0
offset_bottom = 142.0
focus_neighbor_left = NodePath("../Ballade")
focus_neighbor_top = NodePath("../Punk")
focus_mode = 2
item = 16

[node name="TransTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
autostart = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAAAAAABAAAAAAAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAAAAgAAAABAAAAAAAAAAkAAAABAAAAAAAAAAoAAAABAAAAAAAAAAsAAAABAAAAAAAAAAwAAAABAAAAAAAAAA0AAAABAAAAAAAAAA4AAAABAAAAAAAAAA8AAAABAAAAAAAAABAAAAABAAAAAAAAABEAAAABAAAAAAAAABIAAAABAAAAAAAAABMAAAABAAAAAAAAABQAAAABAAAAAAAAABUAAAABAAAAAAAAABYAAAABAAAAAAAAABcAAAABAAAAAAAAABgAAAABAAAAAAAAABkAAAABAAAAAAAAABoAAAABAAAAAAABABoAAAABAAAAAAACABoAAAABAAAAAAADABoAAAABAAAAAAAEABoAAAABAAAAAAAFABoAAAABAAAAAAAGABoAAAABAAAAAAAHABoAAAABAAAAAAAIABoAAAABAAAAAAAJABoAAAABAAAAAAAKABoAAAABAAAAAAALABoAAAABAAAAAAAMABoAAAABAAAAAAANABoAAAABAAAAAAAOABoAAAABAAAAAAAPABoAAAABAAAAAAAQABoAAAABAAAAAAARABoAAAABAAAAAAASABoAAAABAAAAAAATABoAAAABAAAAAAAUABoAAAABAAAAAAAVABoAAAABAAAAAAAfABoAAAABAAAAAAAgABoAAAABAAAAAAAhABoAAAABAAAAAAAiABoAAAABAAAAAAAjABoAAAABAAAAAAAkABoAAAABAAAAAAAlABoAAAABAAAAAAAmABoAAAABAAAAAAAnABoAAAABAAAAAAAoABoAAAABAAAAAAApABoAAAABAAAAAAAqABoAAAABAAAAAAArABoAAAABAAAAAAAsABoAAAABAAAAAAAtABoAAAABAAAAAAAuABoAAAABAAAAAAAvABoAAAABAAAAAAAeABoAAAABAAAAAAAdABoAAAABAAAAAAAcABoAAAABAAAAAAAbABoAAAABAAAAAAAaABoAAAABAAAAAAAZABoAAAABAAAAAAAYABoAAAABAAAAAAAXABoAAAABAAAAAAAWABoAAAABAAAAAAAvAAAAAAABAAAAAAAvAAEAAAABAAAAAAAvAAIAAAABAAAAAAAvAAMAAAABAAAAAAAvAAQAAAABAAAAAAAvAAUAAAABAAAAAAAvAAYAAAABAAAAAAAvAAcAAAABAAAAAAAvAAgAAAABAAAAAAAvAAkAAAABAAAAAAAvAAoAAAABAAAAAAAvAAsAAAABAAAAAAAvAAwAAAABAAAAAAAvAA0AAAABAAAAAAAvABYAAAABAAAAAAAvABcAAAABAAAAAAAvABgAAAABAAAAAAAvABkAAAABAAAAAAAvABUAAAABAAAAAAAvABQAAAABAAAAAAAvABMAAAABAAAAAAAvABIAAAABAAAAAAAvABEAAAABAAAAAAAvABAAAAABAAAAAAAvAA8AAAABAAAAAAAvAA4AAAABAAAAAAAuAAAAAAABAAAAAAAtAAAAAAABAAAAAAAsAAAAAAABAAAAAAArAAAAAAABAAAAAAAqAAAAAAABAAAAAAApAAAAAAABAAAAAAAoAAAAAAABAAAAAAAnAAAAAAABAAAAAAAmAAAAAAABAAAAAAAlAAAAAAABAAAAAAAkAAAAAAABAAAAAAAjAAAAAAABAAAAAAAiAAAAAAABAAAAAAAhAAAAAAABAAAAAAAgAAAAAAABAAAAAAAfAAAAAAABAAAAAAAeAAAAAAABAAAAAAAdAAAAAAABAAAAAAAcAAAAAAABAAAAAAAbAAAAAAABAAAAAAAaAAAAAAABAAAAAAAZAAAAAAABAAAAAAAYAAAAAAABAAAAAAAXAAAAAAABAAAAAAAWAAAAAAABAAAAAAAVAAAAAAABAAAAAAAUAAAAAAABAAAAAAATAAAAAAABAAAAAAASAAAAAAABAAAAAAARAAAAAAABAAAAAAAQAAAAAAABAAAAAAAPAAAAAAABAAAAAAAOAAAAAAABAAAAAAANAAAAAAABAAAAAAAMAAAAAAABAAAAAAALAAAAAAABAAAAAAAKAAAAAAABAAAAAAAJAAAAAAABAAAAAAAIAAAAAAABAAAAAAAHAAAAAAABAAAAAAAGAAAAAAABAAAAAAAFAAAAAAABAAAAAAAEAAAAAAABAAAAAAADAAAAAAABAAAAAAACAAAAAAABAAAAAAAfAAEAAAABAAAAAAAfAAIAAAABAAAAAAAfAAMAAAACAAEAAGAfAAQAAAABAAEAAGAfAAUAAAACAAEAAGAfAAYAAAABAAEAAGAfAAcAAAAAAAMAAGAfAAgAAAABAAAAAAAgAAgAAAABAAAAAAAhAAgAAAABAAAAAAAiAAgAAAABAAAAAAAjAAgAAAABAAAAAAAkAAgAAAABAAAAAAAlAAgAAAABAAAAAAAmAAgAAAABAAAAAAAnAAgAAAABAAAAAAAoAAgAAAABAAAAAAApAAgAAAABAAAAAAAqAAgAAAABAAAAAAArAAgAAAABAAAAAAAsAAgAAAABAAAAAAAtAAgAAAABAAAAAAAuAAgAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAABAAAAAAABAAYAAAABAAAAAAABAAcAAAABAAAAAAABAAgAAAABAAAAAAABAAkAAAABAAAAAAABAAoAAAABAAAAAAABAAsAAAABAAAAAAABAAwAAAABAAAAAAABAAUAAAABAAAAAAABAAQAAAABAAAAAAABAAMAAAABAAAAAAABABMAAAABAAAAAAABABIAAAABAAAAAAABABEAAAABAAAAAAABABAAAAABAAAAAAABAA8AAAABAAAAAAABAA4AAAABAAAAAAABAA0AAAABAAAAAAABABQAAAABAAAAAAABABUAAAABAAAAAAABABYAAAABAAAAAAABABcAAAABAAAAAAABABgAAAABAAAAAAABABkAAAABAAAAAAACAAEAAAABAAAAAAADAAEAAAACAAAAAAAdAAEAAAACAAAAABAeAAEAAAABAAAAAAAgAAkAAAABAAAAAAAjAAkAAAABAAAAAAAkAAkAAAABAAAAAAAlAAkAAAABAAAAAAAiAAkAAAABAAAAAAAhAAkAAAABAAAAAAAmAAkAAAABAAAAAAAnAAkAAAABAAAAAAAoAAkAAAABAAAAAAApAAkAAAABAAAAAAAqAAkAAAABAAAAAAArAAkAAAABAAAAAAAsAAkAAAABAAAAAAAtAAkAAAABAAAAAAAuAAkAAAABAAAAAAAgAAcAAAAAAAQAAGAgAAYAAAABAAIAAGAgAAUAAAACAAIAAGAgAAQAAAABAAIAAGAgAAMAAAACAAIAAGAgAAIAAAABAAAAAAAgAAEAAAABAAAAAAAfAAkAAAACAAAAABACAAIAAAACAAAAAAAeAAIAAAACAAAAABACABUAAAAAAAIAACADABUAAAABAAIAAAAEABUAAAACAAIAAAAFABUAAAABAAIAAAAGABUAAAACAAIAAAAHABUAAAABAAIAAAAIABUAAAACAAIAAAAJABUAAAABAAIAAAAKABUAAAACAAIAAAALABUAAAABAAIAAAAMABUAAAACAAIAAAANABUAAAABAAIAAAAOABUAAAACAAIAAAAPABUAAAABAAIAAAAQABUAAAACAAIAAAARABUAAAABAAIAAAASABUAAAACAAIAAAATABUAAAABAAIAAAAUABUAAAACAAIAAAAVABUAAAABAAIAAAAWABUAAAACAAIAAAAXABUAAAABAAIAAAAYABUAAAACAAIAAAAZABUAAAABAAIAAAAaABUAAAACAAIAAAAbABUAAAABAAIAAAAcABUAAAACAAIAAAAdABUAAAABAAIAAAAeABUAAAACAAIAAAAfABUAAAAAAAQAAAAgABUAAAAAAAQAAAAhABUAAAAAAAQAAAAiABUAAAAAAAQAAAAjABUAAAAAAAQAAAAkABUAAAAAAAQAAAAlABUAAAAAAAQAAAAmABUAAAABAAAAAAAtABUAAAABAAAAAAAuABUAAAABAAAAAAAsABUAAAABAAAAAAArABUAAAABAAAAAAAqABUAAAABAAAAAAApABUAAAABAAAAAAAoABUAAAABAAAAAAAnABUAAAABAAAAAAAhAAoAAAAAAAIAAEAhAAsAAAACAAEAAGAhAAwAAAABAAEAAGAhAA0AAAACAAEAAGAhAA4AAAABAAEAAGAhAA8AAAACAAEAAGAhABAAAAABAAEAAGAhABEAAAACAAEAAGAhABIAAAABAAEAAGAhABMAAAAAAAIAAGAhABQAAAAAAAMAAAAiABMAAAAAAAIAAHAiABIAAAABAAIAAGAiABEAAAACAAIAAGAiABAAAAABAAIAAGAiAA8AAAACAAIAAGAiAA4AAAABAAIAAGAiAA0AAAACAAIAAGAiAAwAAAABAAIAAGAiAAsAAAACAAIAAGAiAAoAAAAAAAIAAFAiABQAAAAAAAMAAAACABQAAAAAAAIAAAADABQAAAABAAEAAAAEABQAAAACAAEAAAAFABQAAAABAAEAAAAGABQAAAACAAEAAAAHABQAAAABAAEAAAAIABQAAAACAAEAAAAJABQAAAABAAEAAAAKABQAAAACAAEAAAALABQAAAABAAEAAAAMABQAAAACAAEAAAANABQAAAABAAEAAAAOABQAAAACAAEAAAAPABQAAAABAAEAAAAQABQAAAACAAEAAAARABQAAAABAAEAAAASABQAAAACAAEAAAATABQAAAABAAEAAAAUABQAAAACAAEAAAAVABQAAAABAAEAAAAWABQAAAACAAEAAAAXABQAAAABAAEAAAAYABQAAAACAAEAAAAZABQAAAABAAEAAAAaABQAAAACAAEAAAAbABQAAAABAAEAAAAcABQAAAACAAEAAAAdABQAAAABAAEAAAAeABQAAAACAAEAAAAfABQAAAAAAAMAAAAgABQAAAAAAAMAAAAjABQAAAAAAAMAAAAkABQAAAAAAAMAAAAlABQAAAAAAAMAAAAmABQAAAABAAAAAAAnABQAAAABAAAAAAAoABQAAAABAAAAAAApABQAAAABAAAAAAAqABQAAAABAAAAAAArABQAAAABAAAAAAAsABQAAAABAAAAAAAtABQAAAABAAAAAAAuABQAAAABAAAAAAAgABMAAAAAAAEAAGACABMAAAAAAAEAAAACABYAAAAAAAEAACACABkAAAACAAAAACAgAAoAAAAAAAEAAEAjAAoAAAAAAAEAAFAjABMAAAAAAAEAAHA=")
tile_set = SubResource("TileSet_5sydj")
